--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,8 +11,10 @@
     "bootstrap": "^5.1.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "papaparse": "^5.3.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-paginate": "^8.1.2",
     "react-router-dom": "^5.3.0",
